# reshuffle-experiments

./: .gitignore  CMakeLists.txt  conanfile.txt  run-benchmarks.sh
.github/workflows/: clang-format.yml  gcc-tests.yaml  static-analysis.yml
benchmarks/: CMakeLists.txt  costa_benchmark.cpp  reshuffle_benchmark.cpp  scalapack_benchmark.cpp
benchmarks/include/: benchmark_config.hpp  null_reporter.hpp
cmake/modules/: FindSCALAPACK.cmake  Findcosta.cmake  Findreshuffle.cmake
examples/: CMakeLists.txt  basic_costa.cpp  change_block_size_costa.cpp  change_block_size_scalapack.cpp  costa_basic.cpp  costa_change_block_size.cpp  costa_gather.cpp  costa_scatter.cpp  gather_costa.cpp  gather_scalapack.cpp  main.cpp  mdspan.hpp  scalapack_change_block_size.cpp  scalapack_gather.cpp  scalapack_scatter.cpp  scatter_costa.cpp
scripts/: README.md  benchmark.py  compare.py  requirements.txt
scripts/common/: benchmark_context.py  json_parser.py  metric.py  metric_trace.py  metric_utils.py  plotter.py  results.py
scripts/examples/: results_costa.json  results_reshuffle.json  results_scalapack.json
scripts/tests/: test_json_parser.py  test_metric_trace.py  test_metric_utils.py
